k8s/infra/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:           
    app: redis
    role: master
    tier: backend
spec:
  ports:
  - port: 6379      
    targetPort: 6379
  selector:         
    app: redis
    role: master
    tier: backend
    
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: redis-master
  labels:
    app: redis      
spec:
  selector:
    matchLabels:    
      app: redis
      role: master
      tier: backend
  replicas: 1         
  template:         
    metadata:
      labels:       
        app: redis
        role: master
        tier: backend
    spec:           
      containers:
      - name: redis
        image: bitnami/redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-persistent-storage
          mountPath: /bitnami/redis/data    
      volumes:
      - name: redis-persistent-storage
        persistentVolumeClaim:
          claimName: redis-pv-claim              
      securityContext:
        runAsUser: 0
