k8s/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: istio
spec:
  controller: istio.io/ingress-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: istio
  rules:
  - host: cdn.localhost.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: static-files
              port:
                number: 80
  - host: api.localhost.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rest-api
              port:
                number: 2525   
  - host: go-simp.localhost.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: go-simp-web
              port:
                number: 8000
